[package]
name = "squawk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "squawk"
src = "src/main.rs"

[[bin]]
name = "squawk-server"
src = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = "0.5.0-rc.2"
